--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,16 +26,15 @@ jobs:
         with:
           node-version: 18
           cache: "npm"
-          working-directory: Frontend # Specify the working directory
+
+      - name: Navigate to Frontend Directory
+        run: cd Frontend
 
       - name: Install dependencies
         run: npm install
-        working-directory: Frontend # Ensure commands run in the Frontend directory
 
       - name: Build project
         run: npm run build
-        working-directory: Frontend # Ensure commands run in the Frontend directory
 
       - name: Run linting
         run: npm run lint
-        working-directory: Frontend # Ensure commands run in the Frontend directory
