basic layout with dummy pages added

--- a/Backend/HealthAPP/9.4.2/aspnet-core/docker/ng/docker-compose.yml
+++ b/Backend/HealthAPP/9.4.2/aspnet-core/docker/ng/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: abp/host
     environment:
       ASPNETCORE_ENVIRONMENT: "Staging"
-      ConnectionStrings__Default: "Server=10.0.75.1; Database=HealthAPPDb; User=HealthAPPUser; Password=YourStrongPassword;TrustServerCertificate=True;"
+      ConnectionStrings__Default: "Server=192.168.110.243; Database=HealthAPPDb; User Id=sa; Password=yourStrong(!)Password; TrustServerCertificate=True;"
       App__ServerRootAddress: "http://localhost:44311/"
       App__ClientRootAddress: "http://localhost:4200/"
       App__CorsOrigins: "http://localhost:4200"
@@ -16,9 +16,18 @@ services:
       - "44311:80"
     volumes:
       - "./Host-Logs:/app/App_Data/Logs"
+      - "./data-protection-keys:/root/.aspnet/DataProtection-Keys"  # Persist Data Protection keys
+    networks:
+      - app_network
     restart: always
 
   abp_ng:
     image: abp/ng
     ports:
       - "4200:80"
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
