--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.24.6",
+    "axios": "^1.8.4",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "redux-actions": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
