Dockerzized and ready to be hosted

--- a/Backend/HealthAPP/9.4.2/aspnet-core/src/HealthAPP.Migrator/appsettings.json
+++ b/Backend/HealthAPP/9.4.2/aspnet-core/src/HealthAPP.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "Server=localhost; Database=HealthAPPDb; Trusted_Connection=True; TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "Default": "Server=tcp:healthappserver27.database.windows.net,1433; Database=HealthAPPDb; User Id=sqladmin; Password=MySecurePass123!; TrustServerCertificate=True; Encrypt=True;"
+    }
 }
