--- a/Backend/HealthAPP/9.4.2/aspnet-core/src/HealthAPP.Web.Host/appsettings.Staging.json
+++ b/Backend/HealthAPP/9.4.2/aspnet-core/src/HealthAPP.Web.Host/appsettings.Staging.json
@@ -1,9 +1,9 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "Server=10.0.75.1; Database=HealthAPPDb; User=sa; Password=123qwe;"
-  },
-  "App": {
-    "ServerRootAddress": "http://localhost:9902/",
-    "CorsOrigins": "http://localhost:9902"
-  }
+    "ConnectionStrings": {
+        "Default": "Server=tcp:healthappserver27.database.windows.net,1433; Database=HealthAPPDb; User Id=sqladmin; Password=MySecurePass123!; TrustServerCertificate=True; Encrypt=True; "
+    },
+    "App": {
+        "ServerRootAddress": "http://localhost:9902/",
+        "CorsOrigins": "http://localhost:9902"
+    }
 }
