--- a/Backend/HealthAPP/9.4.2/aspnet-core/src/HealthAPP.Web.Host/appsettings.json
+++ b/Backend/HealthAPP/9.4.2/aspnet-core/src/HealthAPP.Web.Host/appsettings.json
@@ -1,28 +1,28 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "Server=localhost; Database=HealthAPPDb; Trusted_Connection=True; TrustServerCertificate=True;"
-  },
-  "App": {
-    "ServerRootAddress": "https://localhost:44311/",
-    "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
-  },
-  "Authentication": {
-    "JwtBearer": {
-      "IsEnabled": "true",
-      "SecurityKey": "HealthAPP_93CC5A9839964C2EAFB4D7AD64543635",
-      "Issuer": "HealthAPP",
-      "Audience": "HealthAPP"
+    "ConnectionStrings": {
+        "Default": "Server=tcp:healthappserver27.database.windows.net,1433; Database=HealthAPPDb; User Id=sqladmin; Password=MySecurePass123!; TrustServerCertificate=True; Encrypt=True; "
+    },
+    "App": {
+        "ServerRootAddress": "https://localhost:44311/",
+        "ClientRootAddress": "http://localhost:4200/",
+        "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    },
+    "Authentication": {
+        "JwtBearer": {
+            "IsEnabled": "true",
+            "SecurityKey": "HealthAPP_93CC5A9839964C2EAFB4D7AD64543635",
+            "Issuer": "HealthAPP",
+            "Audience": "HealthAPP"
+        }
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "https://localhost:44311/"
+            }
+        }
+    },
+    "Swagger": {
+        "ShowSummaries": false
     }
-  },
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "https://localhost:44311/"
-      }
-    }
-  },
-  "Swagger": {
-    "ShowSummaries": false
-  }
 }
