--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "redux-actions": "^3.0.3"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-redux": "^7.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "typescript": "^5"
