--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Core/healthap.Web.Core.csproj
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Core/healthap.Web.Core.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
     <PackageReference Include="Abp.AspNetCore" Version="10.0.0" />
     <PackageReference Include="Abp.ZeroCore" Version="10.0.0" />
