--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
@@ -1,28 +1,38 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "Server=localhost; Database=healthapDb; Trusted_Connection=True; TrustServerCertificate=True;"
-  },
-  "App": {
-    "ServerRootAddress": "https://localhost:44311/",
-    "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
-  },
-  "Authentication": {
-    "JwtBearer": {
-      "IsEnabled": "true",
-      "SecurityKey": "healthap_84F2190880464BBCAEF927F929C9EC5C",
-      "Issuer": "healthap",
-      "Audience": "healthap"
+    "ConnectionStrings": {
+        "Default": "Server=localhost; Database=healthapDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    },
+    "App": {
+        "ServerRootAddress": "https://localhost:44311/",
+        "ClientRootAddress": "http://localhost:4200/",
+        "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    },
+    "Authentication": {
+        "JwtBearer": {
+            "IsEnabled": "true",
+            "SecurityKey": "healthap_84F2190880464BBCAEF927F929C9EC5C",
+            "Issuer": "healthap",
+            "Audience": "healthap"
+        }
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "https://localhost:44311/"
+            }
+        }
+    },
+    "Swagger": {
+        "ShowSummaries": false
+    },
+
+    "GeolocationApi": {
+        "Url": "http://api.ipstack.com",
+        "ApiKey": "ce626507729fec9a64627894cf760356",
+        "CacheDurationHours": 24,
+        "TimeoutSeconds": 60
+    },
+    "DistributedCache": {
+        "InstanceName": "healthap_"
     }
-  },
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "https://localhost:44311/"
-      }
-    }
-  },
-  "Swagger": {
-    "ShowSummaries": false
-  }
 }
