--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Application/healthap.Application.csproj
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Application/healthap.Application.csproj
@@ -12,6 +12,9 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.4" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\healthap.Core\healthap.Core.csproj" />
   </ItemGroup>
 </Project>
