--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Core/healthap.Core.csproj
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Core/healthap.Core.csproj
@@ -18,5 +18,8 @@
     <PackageReference Include="Abp.AutoMapper" Version="10.0.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="10.0.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="4.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.4" />
+    <PackageReference Include="Polly" Version="8.5.2" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
   </ItemGroup>
 </Project>
