--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.EntityFrameworkCore/healthap.EntityFrameworkCore.csproj
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.EntityFrameworkCore/healthap.EntityFrameworkCore.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\healthap.Core\healthap.Core.csproj" />
