--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Migrator/healthap.Migrator.csproj
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Migrator/healthap.Migrator.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Abp.Castle.Log4Net" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\healthap.Core\healthap.Core.csproj" />
