--- a/Backend/healthap/10.0.1/aspnet-core/test/healthap.Tests/healthap.Tests.csproj
+++ b/Backend/healthap/10.0.1/aspnet-core/test/healthap.Tests/healthap.Tests.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\..\src\healthap.EntityFrameworkCore\healthap.EntityFrameworkCore.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
