--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Application/healthap.Application.csproj
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Application/healthap.Application.csproj
@@ -12,6 +12,10 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Twilio" Version="7.10.0" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="8.1.1" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\healthap.Core\healthap.Core.csproj" />
   </ItemGroup>
 </Project>
