--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.0",
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
+    "antd-style": "^3.7.1",
     "axios": "^1.8.4",
     "next": "15.2.4",
     "react": "^19.0.0",
