--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/moment": "^2.11.29",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
