--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,14 +14,18 @@
     "antd": "^5.24.7",
     "antd-style": "^3.7.1",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "redux-actions": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/moment": "^2.11.29",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
