--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "next": "15.2.4",
     "react": "^19.0.0",
