basic endpoints for locations

--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Application/healthap.Application.csproj
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Application/healthap.Application.csproj
@@ -19,5 +19,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\healthap.Core\healthap.Core.csproj" />
+    <ProjectReference Include="..\healthap.EntityFrameworkCore\healthap.EntityFrameworkCore.csproj" />
   </ItemGroup>
 </Project>
