--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "next": "15.2.4",
     "react": "^19.0.0",
