--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Migrator/appsettings.json
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "Server=localhost; Database=healthapDb; Trusted_Connection=True; TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "Default": "Server=localhost; Database=healthapDb3; Trusted_Connection=True; TrustServerCertificate=True;"
+    }
 }
