--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.Staging.json
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.Staging.json
@@ -1,9 +1,9 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "Server=10.0.75.1; Database=healthapDb; User=sa; Password=123qwe;"
-  },
-  "App": {
-    "ServerRootAddress": "http://localhost:9902/",
-    "CorsOrigins": "http://localhost:9902"
-  }
+    "ConnectionStrings": {
+        "Default": "Server=10.0.75.1; Database=healthapDb3; User=sa; Password=123qwe;"
+    },
+    "App": {
+        "ServerRootAddress": "http://localhost:9902/",
+        "CorsOrigins": "http://localhost:9902"
+    }
 }
