--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "Default": "Server=localhost; Database=healthapDb; Trusted_Connection=True; TrustServerCertificate=True;"
+        "Default": "Server=localhost; Database=healthapDb3; Trusted_Connection=True; TrustServerCertificate=True;"
     },
     "App": {
         "ServerRootAddress": "https://localhost:44311/",
