--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.0",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.7.0",
+    "@types/styled-components": "^5.1.34",
     "antd": "^5.24.7",
     "antd-style": "^3.7.1",
     "axios": "^1.8.4",
@@ -24,7 +25,8 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
-    "redux-actions": "^3.0.3"
+    "redux-actions": "^3.0.3",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
