--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,8 @@
     "antd-style": "^3.7.1",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
