--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.Staging.json
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.Staging.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "Default": "Server=10.0.75.1; Database=healthapDb3; User=sa; Password=123qwe;"
+        "Default": "Server=localhost; Database=healthapDb; Trusted_Connection=True; TrustServerCertificate=True;"
     },
     "App": {
         "ServerRootAddress": "http://localhost:9902/",
