--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
@@ -18,7 +18,7 @@
     "Kestrel": {
         "Endpoints": {
             "Http": {
-                "Url": "https://localhost:44311/"
+                "Url": "http://0.0.0.0:80"
             }
         }
     },
@@ -29,11 +29,5 @@
         "AccountSid": "AC5c62df0d54b603eb0e268a03d3188502",
         "AuthToken": "e97ecd1c81b71af9ede8e86b28f371a8",
         "FromNumber": "+15807413538"
-    },
-    "GooglePlaces": {
-        "ApiKey": "AIzaSyC0KGBVfkB9P2MVE47KncL3CFHEasl8Now"
     }
-
-
-
 }
