--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.488.0",
     "moment": "^2.30.1",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -34,6 +35,7 @@
     "@types/react-redux": "^7.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "lodash.debounce": "^4.0.8",
     "typescript": "^5"
   }
 }
