--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "antd-style": "^3.7.1",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "face-api.js": "^0.22.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
     "moment": "^2.30.1",
