build issues backedn fix

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,5 +39,8 @@
     "eslint-config-next": "15.2.4",
     "lodash.debounce": "^4.0.8",
     "typescript": "^5"
+  },
+  "overrides": {
+    "node-fetch": "^2.6.9"
   }
 }
