Attempt at get all appointments

--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "Default": "Server=tcp:healthappserver27.database.windows.net,1433;Initial Catalog=health-sql-db;Persist Security Info=False;User ID=sqladmin;Password=MySecurePass123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
+        "Default": "Server=localhost; Database=healthapDb5; Trusted_Connection=True; TrustServerCertificate=True;"
     },
     "App": {
         "ServerRootAddress": "https://localhost:44311/",
