--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "face-api.js": "^0.22.2",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "kill-port": "^2.0.1",
     "lucide-react": "^0.488.0",
