--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,8 +16,10 @@
     "antd": "^5.24.7",
     "antd-style": "^3.7.1",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "face-api.js": "^0.22.2",
+    "firebase": "^11.6.0",
     "jwt-decode": "^4.0.0",
     "kill-port": "^2.0.1",
     "lucide-react": "^0.488.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/firebase": "^2.4.32",
     "@types/moment": "^2.11.29",
     "@types/node": "^20",
     "@types/react": "^19",
