--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,16 +13,18 @@
     "@google/generative-ai": "^0.24.0",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.7.0",
-    "antd": "^5.24.7",
+    "antd": "^5.24.8",
     "antd-style": "^3.7.1",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "face-api.js": "^0.22.2",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "kill-port": "^2.0.1",
     "lucide-react": "^0.488.0",
     "moment": "^2.30.1",
     "next": "15.2.4",
+    "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
