--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run"
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
@@ -32,15 +33,21 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/moment": "^2.11.29",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-redux": "^7.1.34",
+    "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "jsdom": "^26.1.0",
     "lodash.debounce": "^4.0.8",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.1.2"
   },
   "overrides": {
     "node-fetch": "^2.6.9"
