--- a/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
+++ b/Backend/healthap/10.0.1/aspnet-core/src/healthap.Web.Host/appsettings.json
@@ -1,11 +1,14 @@
 ﻿{
+    //"ConnectionStrings": {
+    //    "Default": "Server=tcp:healthappserver27.database.windows.net,1433;Initial Catalog=health-sql-db;Persist Security Info=False;User ID=sqladmin;Password=MySecurePass123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
+    //}
     "ConnectionStrings": {
-        "Default": "Server=tcp:healthappserver27.database.windows.net,1433;Initial Catalog=health-sql-db;Persist Security Info=False;User ID=sqladmin;Password=MySecurePass123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
+        "Default": "Server=localhost; Database=healthapDb5; Trusted_Connection=True; TrustServerCertificate=True;"
     },
     "App": {
         "ServerRootAddress": "https://localhost:44311/",
         "ClientRootAddress": "http://localhost:4200/",
-        "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+        "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,https://health-appointment-system.vercel.app"
     },
     "Authentication": {
         "JwtBearer": {
